--- a/index.html
+++ b/index.html
@@ -160,31 +160,24 @@ function t() {
  an independent security bugs hunter focused on webapp/websys & Software security. 
 Currently, I'm studying Computer Systems And Networking at EFET Institute Meknes, Morocco.</p>
 
+<p>I work as a Security Researcher at <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a>.</p>
 
-<br><p>I work as a Security Researcher at <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a>.</p>
-
-
-<br><p>The following list contains some of the companies I have 
+<p>The following list contains some of the companies I have 
 collaborated with, and they included me in their security 
-acknowledgements page for reporting valid security issues:</p>
-<br><ul style="list-style-type:circle">
+acknowledgements page for reporting valid security issues:</p><ul style="list-style-type:circle">
 <br>  <li>Microsoft   : <a href="https://technet.microsoft.com/en-us/security/cc308575.aspx">Microsoft HALL OF FAME</a></li>
 <br>  <li>Mundiapolis International University Casablanca: <a href="http://mundiapolis.ma">Aknowledgment Whitehat Security</a></li> 
-<br></ul>
-<br>
+</ul>
+
 <br>If you would like to get in touch with me, whether it be for tech support, a professional work, or to just say hello, feel free to send me an email. 
-<br>
+
 <br>
 <br>@Email : <a href="mailto:soufiane.boussali@efet.ac.ma">soufiane.boussali@efet.ac.ma</a>
-<br>
 <br><p>Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a></p>
-<br>Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a>
-<br><p>
-<br>Github: <a href="https://github.com/hacker404">Soufiane Boussali</a>
-<br></p><p>
+<br>Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a><p>
+<br>Github: <a href="https://github.com/hacker404">Soufiane Boussali</a></p><p>
 <br>Best Regards,
 <br>By Soufiane Boussali .</p>
-<br>
 </div> 
 <script type="text/javascript">
 
