--- a/index.html
+++ b/index.html
@@ -173,9 +173,10 @@ acknowledgements page for reporting valid security issues:</p><ul style="list-st
 
 <br>
 <br>@Email : <a href="mailto:soufiane.boussali@efet.ac.ma">soufiane.boussali@efet.ac.ma</a>
-<br><p>Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a></p>
-<br>Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a><p>
-<br>Github: <a href="https://github.com/hacker404">Soufiane Boussali</a></p><p>
+<br>Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a>
+<br>Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a>
+<br>Github: <a href="https://github.com/hacker404">Soufiane Boussali</a>
+<p>
 <br>Best Regards,
 <br>By Soufiane Boussali .</p>
 </div> 
