--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@ function t() {
 </script> 
 <div id="console"><span id="a">MR.Robot@Hacker404</span>:<span id="b">~</span><span id="c">$</span>whoami && whois 127.0.0.1<br><br>
 <br>Hi, my name is Soufiane Boussali (A.K.A. Hacker404).<p>I'm
- an independent security bugs hunter focused on webapp/websys & Software security. 
+ an individual security bugs hunter focused on webapp/websys & Software security. 
 Currently, I'm studying Computer Systems And Networking at EFET Institute Meknes, Morocco.</p>
 
 <p>I work as a Security Researcher at <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a>.</p>
 
 <p>The following list contains some of the companies I have 
 collaborated with, and they included me in their security 
-acknowledgements page for reporting valid security issues:</p><ul style="list-style-type:circle">
+acknowledgements page for reporting valid security issues:</p><br><ul style="list-style-type:circle">
 <br>  <li>Microsoft   : <a href="https://technet.microsoft.com/en-us/security/cc308575.aspx">Microsoft HALL OF FAME</a></li>
 <br>  <li>Mundiapolis International University Casablanca: <a href="http://mundiapolis.ma">Aknowledgment Whitehat Security</a></li> 
 </ul>
@@ -173,13 +173,16 @@ acknowledgements page for reporting valid security issues:</p><ul style="list-st
 
 <br>
 <br>@Email : <a href="mailto:soufiane.boussali@efet.ac.ma">soufiane.boussali@efet.ac.ma</a>
-<br>Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a>
+<br>
+<br><p>Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a></p>
 <br>Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a>
+<br><p>
 <br>Github: <a href="https://github.com/hacker404">Soufiane Boussali</a>
-<p>
+<br></p><p>
 <br>Best Regards,
 <br>By Soufiane Boussali .</p>
-</div> 
+<br>
+</div>  
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
