--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ function replaceUrls(text) {
 }
 }
 Typer.speed=3;
-Typer.file="127.0.0.1.txt";
+Typer.file="127.0.0.1";
 Typer.init();
  
 var timer = setInterval("t();", 30);
@@ -153,24 +153,19 @@ function t() {
 		clearInterval(timer);
 	}
 }
- 
 </script> 
 <div id="console"><span id="a">MR.Robot@Hacker404</span>:<span id="b">~</span><span id="c">$</span>whoami && whois 127.0.0.1<br><br>
 <br>Hi, my name is Soufiane Boussali (A.K.A. Hacker404).<p>I'm
  an individual security bugs hunter focused on webapp/websys & Software security. 
 Currently, I'm studying Computer Systems And Networking at EFET Institute Meknes, Morocco.</p>
-
 <p>I work as a Security Researcher at <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a>.</p>
-
 <p>The following list contains some of the companies I have 
 collaborated with, and they included me in their security 
 acknowledgements page for reporting valid security issues:</p><br><ul style="list-style-type:circle">
 <br>  <li>Microsoft   : <a href="https://technet.microsoft.com/en-us/security/cc308575.aspx">Microsoft HALL OF FAME</a></li>
 <br>  <li>Mundiapolis International University Casablanca: <a href="http://mundiapolis.ma">Aknowledgment Whitehat Security</a></li> 
 </ul>
-
 <br>If you would like to get in touch with me, whether it be for tech support, a professional work, or to just say hello, feel free to send me an email. 
-
 <br>
 <br>@Email : <a href="mailto:soufiane.boussali@efet.ac.ma">soufiane.boussali@efet.ac.ma</a>
 <br>
@@ -182,7 +177,7 @@ acknowledgements page for reporting valid security issues:</p><br><ul style="lis
 <br>Best Regards,
 <br>By Soufiane Boussali .</p>
 <br>
-</div>  
+ </div> 
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -194,7 +189,6 @@ acknowledgements page for reporting valid security issues:</p><br><ul style="lis
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
 </script>
- 
- </body></html>
+</body>
+</html>
