--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Currently, I'm studying Computer Systems And Networking at EFET Institute Meknes
 <p>The following list contains some of the companies I have 
 collaborated with, and they included me in their security 
 acknowledgements page for reporting valid security issues:</p><br><ul style="list-style-type:circle">
-<br>  <li>Microsoft   : <a href="https://technet.microsoft.com/en-us/security/cc308575.aspx">Microsoft HALL OF FAME</a></li>
+<br>  <li>Microsoft   : <a href="https://technet.microsoft.com/en-us/security/cc308589">Microsoft HALL OF FAME</a></li>
 <br>  <li>Mundiapolis International University Casablanca: <a href="http://mundiapolis.ma">Aknowledgment Whitehat Security</a></li> 
 </ul>
 <br>If you would like to get in touch with me, whether it be for tech support, a professional work, or to just say hello, feel free to send me an email. 
