--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@ acknowledgements page for reporting valid security issues:</p><br><ul style="lis
 <br>Github: <a href="https://github.com/hacker404">Soufiane Boussali</a>
 <br></p><p>
 <br>Best Regards,
-<br>By Soufiane Boussali .</p>
-<br>
+<br>By Soufiane Boussali. |</p><br>
  </div> 
 <script type="text/javascript">
 
