--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@ function t() {
 }
 </script> 
 <div id="console"><span id="a">MR.Robot@Hacker404</span>:<span id="b">~</span><span id="c">$</span>whoami && whois 127.0.0.1<br><br>
-<br>Hi, my name is Soufiane Boussali (A.K.A. Hacker404).<p>I'm
- an individual security bugs hunter focused on webapp/websys & Software security. 
+<br>Hi, my name is Soufiane Boussali (A.K.A. Hacker404).
+<p>26 Years, Moroccan Student Based Security Researcher & bugs hunter focused on webapp/websys & Software security. 
 Currently, I studied Computer Systems And Networking at EFET Institute Meknes, Morocco.</p>
 <p>I work as a Security Researcher at <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a>.</p>
 <p>The following list contains some of the companies I have 
@@ -175,7 +175,7 @@ acknowledgements page for reporting valid security issues:</p><br><ul style="lis
 <br>Github: <a href="https://github.com/hacker404">Soufiane Boussali</a>
 <br></p><p>
 <br>Best Regards,
-<br>By Soufiane Boussali. |</p><br>
+<br>By Soufiane Boussali. |</p>
  </div> 
 <script type="text/javascript">
 
