--- a/index.html
+++ b/index.html
@@ -153,8 +153,35 @@ function t() {
 		clearInterval(timer);
 	}
 }
-
-
+</script> 
+<div id="console"><span id="a">MR.Robot@Hacker404</span>:<span id="b">~</span><span id="c">$</span>whoami && whois 127.0.0.1<br><br>
+<br>Hi, my name is Soufiane Boussali (A.K.A. Hacker404).
+<p>26 Years, Moroccan Student Based Security Researcher & bugs hunter focused on webapp/websys & Software security. 
+Currently, I studied Computer Systems And Networking at EFET Institute Meknes, Morocco.</p>
+<p>I work as a Security Researcher at <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a>.</p>
+<p>The following list contains some of the companies I have 
+collaborated with, and they included me in their security 
+acknowledgements page for reporting valid security issues:</p><br><ul style="list-style-type:circle">
+<br>  <li>Microsoft   : <a href="https://technet.microsoft.com/en-us/security/cc308589">Microsoft HALL OF FAME</a></li>
+<br>  <li>IBM Company : <a href="http://www.ibm.com/thanks">IBM HALL OF FAME comming Soon</a></li>
+<br>  <li>Ebay : <a href="http://pages.ebay.com/securitycenter/ResearchersAcknowledgement.html">Ebay HALL OF FAME</a></li>
+<br>  <li>ESET Technology : <a href="http://www.eset.com/thanks/">ESET Technology Acknowledgment</a></li>
+<br>  <li>AVG Company : <a href="http://www.avg.com/thanks">AVG Acknowledgment</a></li>
+<br>  <li>Mundiapolis International University Casablanca: <a href="http://mundiapolis.ma">Aknowledgment Whitehat Security</a></li> 
+</ul>
+<br>If you would like to get in touch with me, whether it be for tech support, a professional work, or to just say hello, feel free to send me an email. 
+<br>
+<br>@Email : <a href="mailto:soufiane.boussali@efet.ac.ma">soufiane.boussali@efet.ac.ma</a>
+<br>
+<br><p>Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a></p>
+<br>Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a>
+<br><p>
+<br>Github: <a href="https://github.com/hacker404">Soufiane Boussali</a>
+<br></p><p>
+<br>Best Regards,
+<br>By Soufiane Boussali. |</p>
+ </div> 
+<script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-610661-7']);
   _gaq.push(['_trackPageview']);
