--- a/index.html
+++ b/index.html
@@ -175,6 +175,18 @@ acknowledgements page for reporting valid security issues:</p><br><ul style="lis
 <br>@Email : <a href="mailto:soufiane.boussali@efet.ac.ma">soufiane.boussali@efet.ac.ma</a>
 <br>
 <br><p>Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a></p>
+
+<br><p>Page FB:
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
+<a href="https://facebook.com/soufiane.boussali">Soufian Boussali</a></p>
+
+
+
 <br>Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a>
 <br><p>
 <br>Github: <a href="https://github.com/hacker404">Soufiane Boussali</a>
