--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@ acknowledgements page for reporting valid security issues:</p><br><ul style="lis
 
 
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.5&appId=1089713101044286";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
@@ -204,6 +212,10 @@ acknowledgements page for reporting valid security issues:</p><br><ul style="lis
   data-show-faces="true">
 </div>
 <a href="https://facebook.com/soufiane.boussali">Soufian Boussali</a></p>
+<div class="fb-follow" data-href="https://www.facebook.com/soufiane.boussali" data-layout="standard" data-show-faces="true"></div>
+
+
+
 
 
 
