--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ acknowledgements page for reporting valid security issues:</p><br><ul style="lis
 <br><p>
 <br>Github: <a href="https://github.com/hacker404">Soufiane Boussali</a>
 <br></p><p>
-<br>Best Regards,
+<br>Kind Regards,
 <br>By Soufiane Boussali. |</p>
  </div> 
 <script type="text/javascript">
