--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ function replaceUrls(text) {
 }
 }
 Typer.speed=3;
-Typer.file="127.0.0.1.txt";
+Typer.file="flag.txt";
 Typer.init();
  
 var timer = setInterval("t();", 30);
