--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a><br>
 
 
 Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a><br>
-Github: <a href="https://github.com/hacker404">Soufiane Boussali</a>
+Github: <a href="https://github.com/Mugiwara">Soufiane Boussali</a>
 <br></p><p>
 <br>Kind Regards,
 <br>By Soufiane Boussali. |</p>
