--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function t() {
 	}
 }
 </script> 
-<div id="console"><span id="a">MR.Robot@Hacker404</span>:<span id="b">~</span><span id="c">$</span>cat flag.txt <br><br>
+<div id="console"><span id="a">MR.Mugiwara@Root</span>:<span id="b">~</span><span id="c">$</span>cat flag.txt <br><br>
 <br>Hi, my name is Soufiane Boussali,
 <p>26 Years, Moroccan WhiteHat Hacker, Student Based Security Researcher & bugs hunter focused on webapp/websys & Software security. 
 Currently, I studied Computer Systems And Networking at EFET Institute Meknes, Morocco.<br>
@@ -221,7 +221,7 @@ Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a><br>
 
 
 Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a><br>
-Github: <a href="https://github.com/Mugiwara">Soufiane Boussali</a>
+Github: <a href="https://github.com/MrMugiwara">Soufiane Boussali</a>
 <br></p><p>
 <br>Kind Regards,
 <br>By Soufiane Boussali. |</p>
