--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a><br>
 <div class="fb-follow" data-href="https://www.facebook.com/soufiane.boussali" data-layout="standard" data-show-faces="true"></div>
 
 
-
+</script>
 
 
 
