--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta property="og:title" content="Soufiane Boussali">
  <meta property="og:type" content="Website"> 
 <meta property="og:description" content="Some Information about Soufiane Boussali">  
-<meta property="og:url" content="http://hacker404.github.io/"> 
+<meta property="og:url" content="http://MrMugiwara.github.io/"> 
 <meta property="og:image" content="https://avatars3.githubusercontent.com/u/7062695?v=3&s=460"> 
 <script src="/files/ga.js" async="" type="text/javascript"></script><script type="text/javascript" src="/files/jquery.js"></script> 
 <style type="text/css"> 
