--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@ acknowledgements page for reporting valid security issues:</p><br><ul style="lis
 <br>  <li>Python Company : <a href="http://bugs.python.org">Python Aknowledgment</a></li>
 <br>  <li>Microsoft Company : <a href="https://technet.microsoft.com/en-us/security/cc308575">Microsoft HALL OF FAME</a></li>
 <br>  <li>IBM Company : <a href="http://www-01.ibm.com/support/docview.wss?uid=swg21975358">IBM Aknowledgment (CVE-2016-0212, CVE-2016-0213, CVE-2016-0216)</a></li>
+
+<br>  <li>Security Focus From IBM Company : <a href="http://www.securityfocus.com/bid/83281">  CVE-2016-0213 </a></li>
+<br>  <li>Security Focus From IBM Company : <a href="http://www.securityfocus.com/bid/83278">  CVE-2016-0212 </a></li>
+<br>  <li>Security Focus From IBM Company : <a href="http://www.securityfocus.com/bid/83280">  CVE-2016-0216 </a></li>
+
 <br>  <li>ESET Technology : <a href="http://www.eset.com">ESET Technology Acknowledgment</a></li>
 <br>  <li>AVG Company : <a href="http://www.avg.com/thanks">AVG Acknowledgment</a></li>
 <br>  <li>Mundiapolis International University Casablanca: <a href="http://mundiapolis.ma">Aknowledgment Whitehat Security</a></li> 
