--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ function t() {
 </script> 
 <div id="console"><span id="a">MR.Mugiwara@Root</span>:<span id="b">~</span><span id="c">$</span>cat flag.txt <br><br>
 <br>Hi, my name is Soufiane Boussali,
-<p>26 Years, Moroccan Security Researcher & bugs Bounty Hunter focused on webapp/websys & Software security, 
+<p>26 Years, Moroccan Security Researcher & bugs Bounty Hunter Focused on WebApp/WebSys & Mobile Softwares Security, 
 Developer Softwares & Open Source interested To Open Hardwares Like a raspberry pi,
 I Speak C/c++,HTML,JS,VB,SQL, And Python.</p><br>
 <p>I work as a HelpDesk IT Solutions at <a href="http://atos.net/en-us/home.html">ATOS MAROC</a> and as an Independant Security Researcher at <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a> & <a href="https://internetbugbounty.org/">The Internet Bug Bounty</a>.</p>
