--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		color: #00fb00;
 	}
 	#b {
-		color: #ff0096;
+		color: #ff0017;
 	}
 </style> 
 </head> 
@@ -42,7 +42,7 @@
 	accessCountimer:null,
 	index:0, // current cursor position
 	speed:4, // speed of the Typer
-	file:"127.0.0.1.txt", //file, must be setted
+	file:"flag{Mr.Mugiwara}.txt", //file, must be setted
 	accessCount:0, //times alt is pressed for Access Granted
 	deniedCount:0, //times caps is pressed for Access Denied
 	init: function(){// inizialize Hacker Typer
