--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=windows-1252"> 
-<title><img src="images/logo.jpg" ></img> Soufiane Boussali  </title> 
+<title><img src="images/logo.png"></img>  Soufiane Boussali </title> 
  <meta property="og:title" content="Soufiane Boussali">
  <meta property="og:type" content="Website"> 
 <meta property="og:description" content="Some Information about Soufiane Boussali">  
