--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><img src="images/logo.png"></img>
+<html><head>
 <meta http-equiv="content-type" content="text/html; charset=windows-1252"> 
 <title>  Soufiane Boussali </title> 
  <meta property="og:title" content="Soufiane Boussali">
@@ -6,7 +6,8 @@
 <meta property="og:description" content="Some Information about Soufiane Boussali">  
 <meta property="og:url" content="http://MrMugiwara.github.io/"> 
 <meta property="og:image" content="https://avatars3.githubusercontent.com/u/7062695?v=3&s=460"> 
-<script src="/files/ga.js" async="" type="text/javascript"></script><script type="text/javascript" src="/files/jquery.js"></script> 
+<script src="/files/ga.js" async="" type="text/javascript"></script>
+<script type="text/javascript" src="/files/jquery.js"></script> 
 <style type="text/css"> 
 	body {
 		background-color: #000
