--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ function t() {
 <p>26 Years, Moroccan Security Researcher & bugs Bounty Hunter Focused on WebApp/WebSys & Mobile Softwares Security,
 Developer Softwares & Open Source interested To Open Hardwares Like a raspberry pi,
 I Speak C/c++,HTML,JS,VB,SQL, And Python.</p><br>
-<p>I work as a HelpDesk IT Solutions at <a href="http://atos.net/en-us/home.html">ATOS MAROC</a> and as an Independant Security Researcher at <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a> & <a href="https://internetbugbounty.org/">The Internet Bug Bounty</a>.</p>
+<p>I work as a HelpDesk IT Solutions at <a href="http://atos.net/en-us/home.html">ATOS Morocco</a> and as an Independant Security Researcher at <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a> & <a href="https://internetbugbounty.org/">The Internet Bug Bounty</a>.</p>
 <p>The following list contains some of the companies I have
 collaborated with, and they included me in their security
 acknowledgements page for reporting valid security issues:</p><br><ul style="list-style-type:circle">
