--- a/index.html
+++ b/index.html
@@ -155,12 +155,34 @@ function t() {
 	}
 }
 </script>
+<span id="a">MR.Mugiwara@Root</span>:<span id="b">~</span><span id="c">$</span>cat flag{Mr.Mugiwara}.txt<br><br>
+<br>Hi, my name is Soufiane Boussali 
+<p>26 Years, Moroccan Security Researcher & bugs Bounty Hunter Focused on WebApp/WebSys & Mobile Softwares Security, 
+Developer Softwares & Open Source interested To Open Hardwares Like a raspberry pi,
+I Speak C/c++,HTML,JS,VB,SQL, And Python.</p><br>
+<p>I work as a HelpDesk IT Solutions at <a href="http://atos.net/en-us/home.html">ATOS Morocco</a> and as an Independant Security Researcher at <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a> & <a href="https://internetbugbounty.org/">The Internet Bug Bounty</a>.</p>
+<p>The following list contains some of the companies I have collaborated with, and they included me in their security  acknowledgements page for reporting valid security issues:</p><br><ul style="list-style-type:circle">
+<br>  <li>Google Company : <a href="https://www.google.com/about/appsecurity/hall-of-fame/distinction/"> Google HALL OF FAME </a></li>
+<br>  <li>Python Company : <a href="http://bugs.python.org">Python Aknowledgment</a></li>
+<br>  <li>Microsoft Company : <a href="https://technet.microsoft.com/en-us/security/cc308575">Microsoft HALL OF FAME</a></li>
+<br>  <li>IBM Company : <a href="http://www-01.ibm.com/support/docview.wss?uid=swg21975358">IBM 0Day Exploits (CVE-2016-0212, CVE-2016-0213, CVE-2016-0216) :</a></li>
+<br><ul><li>National Vulnerability Database : <a href="https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-0212">  CVE-2016-0212 </a></li>
+<br>    <li>National Vulnerability Database : <a href="https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-0213">  CVE-2016-0213 </a></li>
+<br>    <li>National Vulnerability Database : <a href="https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-0216">  CVE-2016-0216 </a></li></ul>
+<br>  <li>ESET Technology : <a href="http://www.eset.com/">ESET Technology Acknowledgment</a></li>
 
-
-
-
-
-
+<br>  <li>AVG Company : <a href="http://www.avg.com/thanks">AVG Acknowledgment</a></li>
+<br>  <li>Mundiapolis International University Casablanca: <a href="https://www.mundiapolis.ma">Aknowledgment Whitehat Security</a></li>
+</ul>
+<br>If you would like to get in touch with me, whether it be for tech support, a professional work, or to just say hello, feel free to send me an email.
+<br>
+@Email : <a href="mailto:soufiane.boussali@efet.ac.ma">soufiane.boussali@efet.ac.ma</a><br>
+Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a><br>
+Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a><br>
+Github: <a href="https://github.com/MrMugiwara">Soufiane Boussali</a><br>
+</p><p>
+<br>Kind Regards,</p>
+<br>By Soufiane Boussali. |
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-610661-7']);
