--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ function t() {
 	}
 }
 </script>
-<div id="console"><span id="a">MR.Mugiwara@Root</span>:<span id="b">~</span><span id="c">$</span>cat flag.txt <br><br>
+<div id="console"><span id="a">MR.Mugiwara@Root</span>:<span id="b">~</span><span id="c">$</span>cat flag{Mr.Mugiwara}.txt <br><br>
 <br>Hi, my name is Soufiane Boussali,
 <p>26 Years, Moroccan Security Researcher & bugs Bounty Hunter Focused on WebApp/WebSys & Mobile Softwares Security,
 Developer Softwares & Open Source interested To Open Hardwares Like a raspberry pi,
