--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ acknowledgements page for reporting valid security issues:</p><br><ul style="lis
 <br>  <li>AVG Company : <a href="http://www.avg.com/thanks">AVG Acknowledgment</a></li>
 <br>  <li>Mundiapolis International University Casablanca: <a href="http://mundiapolis.ma">Aknowledgment Whitehat Security</a></li>
 </ul>
-<br>If you would like to get in touch with me, whether it be for tech support, a professional work, or to just say hello, feel free to send me an email.
+<br>If you would like to get in touch with me, whether it be for tech support, a professional work, or to just say hello, feel free to contact me any time.
 <br>
 @Email : <a href="mailto:soufiane.boussali@efet.ac.ma">soufiane.boussali@efet.ac.ma</a><br>
 Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a><br>
