--- a/index.html
+++ b/index.html
@@ -198,5 +198,12 @@ Donate : <a href="https://paypal.me/boussalisoufiane">PayPal</a><br>
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9557264115401453",
+    enable_page_level_ads: true
+  });
+</script>
 </body>
 </html>
